# Anon

./: .gitignore  README.md  diff.patch  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js
.github/workflows/: ci.yml  release.yml
scripts/: ci-check.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_fingerprint.rs  camoufox.rs  fingerprint_presets.rs  fingerprint_validator.rs  instances.rs  lib.rs  main.rs  settings.rs
src/lib/: store.ts
src/lib/components/: InstanceCard.svelte
src/lib/components/instance/: InstanceCard.svelte  InstanceSettingsModal.svelte  SettingsSection.svelte  WipeDataModal.svelte
src/lib/components/instance/settings/: AdvancedSection.svelte  AudioContextSection.svelte  BatterySection.svelte  BehaviorSection.svelte  CanvasAudioSeedsSection.svelte  FontsSection.svelte  GeolocationTimezoneLocaleSection.svelte  HttpHeadersSection.svelte  InstanceSettingsModal.css  MediaDevicesSection.svelte  NavigatorSection.svelte  ScreenDisplaySection.svelte  SpeechVoicesSection.svelte  WebGLSection.svelte  WebRTCIPSection.svelte  WindowSection.svelte  constants.ts  utils.ts
src/lib/components/ui/: Modal.svelte
src/routes/: +layout.svelte  +page.svelte
